# MRS

./: .gitattributes  CMakeLists.txt  Music.qrc  README.md  direction.h  images.qrc  imageslider.cpp  imagesliderlabel.cpp  imagesliderlabel.h  loginregister.cpp  loginregister.h  loginregister.ui  loginrigsters.cpp  loginrigsters.h  loginrigsters.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pic.h  pic.ui  sql.cpp  sql.h
mysql表/music/: musicname.ibd  user.ibd  userlove.ibd
py/: analyse.py  make tag.py  recommend.py
